--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -11,7 +11,7 @@ permissions: read-all
 env:
   CARGO_TERM_COLOR: always
   RUSTFLAGS: "-Dwarnings -Cinstrument-coverage"
-  LLVM_PROFILE_FILE: "project-%p-%m.profraw"
+  LLVM_PROFILE_FILE: "tokenator-%p-%m.profraw"
 jobs:
   test:
     name: Test
@@ -71,7 +71,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        msrv: ["1.60.0"] # instrument-coverage flag requires Rust 1.60
+        msrv: ["1.85.0"]
     name: ubuntu / ${{ matrix.msrv }}
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -111,8 +111,8 @@ jobs:
         uses: codecov/codecov-action@18283e04ce6e62d37312384ff67231eb8fd56d24 # v5.4.3
         with:
           files: ./target/debug/lcov
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+          token: ${{ secrets.CODECOV_TOKEN }}
+          slug: rodneylab/tokenator
   dependencies:
     runs-on: ubuntu-latest
     steps:
