--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,17 @@ repository = "https://github.com/rodneylab/tokenator"
 rust-version = "1.85"
 description = "Count the number of tokens in an LLM prompt"
 
+[lints.clippy]
+clone_on_ref_ptr = "deny"
+empty_drop = "deny"
+exit = "deny"
+filetype_is_file = "deny"
+get_unwrap = "deny"
+rc_buffer = "deny"
+rc_mutex = "deny"
+rest_pat_in_fully_bound_structs = "deny"
+unnecessary_safety_comment = "deny"
+
 [dependencies]
 ahash = "0.8.12"
 clap = { version = "4.5.42", features = ["derive"] }
