--- a/deny.toml
+++ b/deny.toml
@@ -73,6 +73,7 @@ ignore = [
   # "RUSTSEC-0000-0000",
   # { id = "RUSTSEC-0000-0000", reason = "you can specify a reason the advisory is ignored" },
   { id = "RUSTSEC-2024-0436" },
+  { id = "RUSTSEC-2025-0119" },
   # "a-crate-that-is-yanked@0.1.1", # you can also ignore yanked crate versions if you wish
   # { crate = "a-crate-that-is-yanked@0.1.1", reason = "you can specify why you are ignoring the yanked crate" },
 ]
