--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ description = "Count the number of tokens in an LLM prompt"
 
 [dependencies]
 ahash = "0.8.12"
-clap = { version = "4.5.53", features = ["derive"] }
+clap = { version = "4.5.54", features = ["derive"] }
 clap-verbosity-flag = "3.0.4"
 env_logger = "0.11.8"
 hf-hub = "0.4.3"
@@ -21,7 +21,9 @@ num-format = "0.4.4"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.148"
 strsim = "0.11.1"
+thiserror = "2.0.17"
 tokenizers = "0.22.2"
+ureq = "2.12.1"
 
 [dev-dependencies]
 assert_fs = "1.1.3"
